--- a/Magento_Bundle/templates/catalog/product/view/price.phtml
+++ b/Magento_Bundle/templates/catalog/product/view/price.phtml
@@ -179,9 +179,16 @@ $displayTax = $productPriceViewModel->displayPriceIncludingTax();
             }
         }
     }
+    (() => {
+        const initFn = () => Alpine.data('initPrice<?= (int)$product->getId() ?>', initPrice<?= (int)$product->getId() ?>);
+        window.Alpine
+            ? initFn()
+            : window.addEventListener('alpine:init', initFn, {once: true})
+    })()
+
 </script>
 <?php $hyvaCsp->registerInlineScript() ?>
-<div x-data="initPrice<?= (int)$product->getId() ?>()"
+<div x-data="initPrice<?= (int)$product->getId() ?>"
      x-bind="eventListeners"
      class="price-box price-final_price my-4"
 >
