--- a/Magento_Catalog/templates/product/view/addtowishlist.phtml
+++ b/Magento_Catalog/templates/product/view/addtowishlist.phtml
@@ -143,7 +143,7 @@ $uniqueId = '_' . uniqid();
 
 </script>
 <?php $hyvaCsp->registerInlineScript() ?>
-<button x-data="initWishlist<?= /** @noEscape */ $uniqueId ?>()"
+<button x-data="initWishlist<?= /** @noEscape */ $uniqueId ?>"
         x-defer="intersect"
         data-product-id="<?= (int) $product->getId() ?>"
         @click.prevent="addToWishlist"
