--- a/Magento_Review/templates/form.phtml
+++ b/Magento_Review/templates/form.phtml
@@ -80,9 +80,9 @@ mutation createProductReviewMutation(
         <?php if ($block->getAllowWriteReviewFlag()): ?>
             <form class="review-form"
                   id="<?= $escaper->escapeHtmlAttr($formId) ?>"
-                  @submit.prevent="submitForm()"
+                  @submit.prevent="submitForm"
                   action=""
-                  x-data="initReviewForm()"
+                  x-data="initReviewForm"
                   x-defer="intersect"
             >
                 <?= $block->getChildHtml('form_fields_before') ?>
@@ -364,6 +364,13 @@ mutation createProductReviewMutation(
                         }
                     }
                 }
+                (() => {
+                    const initFn = () => Alpine.data('initReviewForm', initReviewForm);
+                    window.Alpine
+                        ? initFn()
+                        : window.addEventListener('alpine:init', initFn, {once: true})
+                })()
+
             </script>
         <?php $hyvaCsp->registerInlineScript() ?>
         <?php else: ?>
