--- a/Magento_Review/templates/helper/summary.phtml
+++ b/Magento_Review/templates/helper/summary.phtml
@@ -28,12 +28,12 @@ $uniqueId = $productId . uniqid();
 ?>
 <?php if ($block->isReviewEnabled()): ?>
     <div
-        x-data="initRating<?= /* @noEscape */ $uniqueId ?>()"
+        x-data="initRating<?= /* @noEscape */ $uniqueId ?>"
         x-defer="intersect"
-        @keyup.enter="scrollToRatings()"
-        @click="scrollToRatings()"
+        @keyup.enter="scrollToRatings"
+        @click="scrollToRatings"
         class="rating-summary flex"
-        :class="{'cursor-pointer' : reviewsSection}"
+        :class="shortReviewSectionClasses"
         <?php if (!$rating): ?>
             title="<?= $escaper->escapeHtmlAttr(__('Be the first to review this product')) ?>"
         <?php endif; ?>
@@ -42,12 +42,9 @@ $uniqueId = $productId . uniqid();
             itemscope
             itemtype="http://schema.org/AggregateRating"
         <?php endif; ?>
-        :tabindex="reviewsSection ? '0' : '-1'"
-        :aria-label="reviewsSection
-            ? '<?= $escaper->escapeJs(__('%1 rating. %2 out of %3 stars. Click to go to reviews.', $productName, $starsFilled + $starFragment, $ratingSteps))?>'
-            : '<?= $escaper->escapeJs(__('%1 rating. %2 out of %3 stars', $productName, $starsFilled + $starFragment, $ratingSteps))?>'
-        "
-        :role="reviewsSection ? 'button' : 'img'"
+        :tabindex="shortReviewSectionTabindex"
+        :aria-label="shortReviewSectionAriaLabel"
+        :role="shortReviewSectionRole"
     >
         <?php if ($reviewCount): ?>
             <span class="hidden" itemprop="ratingValue"><?= $starsFilled + $starFragment; ?></span>
@@ -162,9 +159,32 @@ $uniqueId = $productId . uniqid();
                     }, { once: true });
 
                     this.reviewsSection.scrollIntoView({behavior: 'smooth'})
+                },
+                shortReviewSectionClasses() {
+                    return {
+                        'cursor-pointer': this.reviewsSection
+                    }
+                },
+                shortReviewSectionTabindex() {
+                    return this.reviewsSection ? '0' : '-1';
+                },
+                shortReviewSectionRole() {
+                    return this.reviewsSection ? 'button' : 'img';
+                },
+                shortReviewSectionAriaLabel() {
+                    return this.reviewsSection
+                        ? '<?= $escaper->escapeJs(__('%1 rating. %2 out of %3 stars. Click to go to reviews.', $productName, $starsFilled + $starFragment, $ratingSteps))?>'
+                        : '<?= $escaper->escapeJs(__('%1 rating. %2 out of %3 stars', $productName, $starsFilled + $starFragment, $ratingSteps))?>';
                 }
             }
         }
+        (() => {
+            const initFn = () => Alpine.data('initRating<?= /* @noEscape */ $uniqueId ?>', initRating<?= /* @noEscape */ $uniqueId ?>);
+            window.Alpine
+                ? initFn()
+                : window.addEventListener('alpine:init', initFn, {once: true})
+        })()
+
     </script>
     <?php $hyvaCsp->registerInlineScript() ?>
 <?php endif; ?>
