--- a/Magento_PageBuilder/templates/widgets/background-image-lazy-load.phtml
+++ b/Magento_PageBuilder/templates/widgets/background-image-lazy-load.phtml
@@ -70,7 +70,7 @@ $pageBuilder = $viewModels->require(PageBuilder::class)
                         .join("\n");
                     const style = document.createElement('style');
                     style.innerHTML = bgImagesCss;
-                    entry.target.append(style);
+                    entry.target.parentElement.append(style);
                     observer.unobserve(entry.target);
                 }
             });
